feat: customer merge redirection
